--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --reporter mochawesome"
+    "test": "mocha '__tests__/*.js' --recursive --reporter mocha-junit-reporter --timeout 60000 --exit"
   },
   "author": "",
   "license": "ISC",
