--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "mocha-junit-reporter": "^2.0.0",
     "mochawesome": "6.1.1"
   },
   "devDependencies": {
